Correção no intervalo handler